# ScientificVisualizer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.FBD9185E977A5D6D.idx  _vectorize.hpp.37939A5D9C8FEA2B.idx  callbacks.h.32E37662C34AD490.idx  camera.h.EE12A17395F37A1C.idx  common.hpp.E606F8E0215DCEAD.idx  compute_common.hpp.1899781B529DCB23.idx  compute_vector_relational.hpp.06CBA7FB4FCC34D8.idx  constants.hpp.E3E5C9D220D17949.idx  constants.inl.79564F27DE482D9A.idx  epsilon.hpp.6D404BB943FE07E6.idx  epsilon.inl.951400C8449C1663.idx  exponential.hpp.B2B0537FD3294D68.idx  func_common.inl.67BB0197D800E522.idx  func_exponential.inl.F431A343E5F432FA.idx  func_geometric.inl.04E435769FDDAC2C.idx  func_integer.inl.C96ED4B416635542.idx  func_matrix.inl.40B357B323F12925.idx  func_packing.inl.B01BCCEEAC9A0465.idx  func_trigonometric.inl.0797FB1EC86370AE.idx  func_vector_relational.inl.22C77A5A1D909FC1.idx  fwd.hpp.A7D282B843B8123C.idx  geometric.hpp.88E87AF37A07D6B3.idx  glad.c.4B72B24E88486690.idx  glad.c.6E58E28A28371DEB.idx  glad.h.21953895F8322D9C.idx  glad.h.BB9AE7646CDC41F5.idx  glm.hpp.7316EFAA21F8A16B.idx  imconfig.h.4429CFFFB4230C97.idx  imgui.cpp.112DCB2A31F20C81.idx  imgui.h.290EDEE508094A84.idx  imgui_draw.cpp.745EDF2E6584764F.idx  imgui_impl_glfw.cpp.EE839497BC5FFB24.idx  imgui_impl_glfw.h.687A6EE1B7E1ECBD.idx  imgui_impl_opengl3.cpp.89C081DFDCF88FA1.idx  (+176 more)
include/: callbacks.h  camera.h  interface.h  mesh.h  model.h  shader.h
include/glad/: glad.h
shaders/: shader.comp  shader.frag  shader.geom  shader.vert
src/: glad.c  main.cpp
